--- a/Libro/libo.tex
+++ b/Libro/libo.tex
@@ -40,8 +40,15 @@
   \item Se pasó el archivo \texttt{md5sums} para validar todos los paquetes.
   \item Hubo un problema de que algunos paquetes no los descargó, esto porque se tenía la fecha desicronizada, toca siempre que se vuelva a utilizar la VM verificar la fecha.
   \item Se hizo las actualizaciones de los paquetes por temas de seguridad.
-  \item \textbf{TODO:} Verificar si me cagué otra cosa del sistema (bins, paquetes, particiones).
 
 \end{itemize}
+
+
+
+\subsection{Final Preparations}
+
+\subsubsection{Introduction}
+
+Vamos a crear un usuario sin privilegios y todo el entorno. También, las unidades de tiempo SBUs que sirven para medir cuánto tiempo toma construir los paquetes de LFS.
 
 \end{document}
